crates/fig-parser/tests/snapshots/integration_tests__unions__simple.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Union:
      visibility: Default
      annotations: []
      name: IntOrFloat
      generic_params: []
      requires: []
      variants:
        - name: integer
          ty: I32
        - name: floating
          ty: F64
