crates/fig-parser/tests/snapshots/integration_tests__unions__with_where.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Union:
      visibility: Default
      annotations: []
      name: Comparable
      generic_params:
        - Type:
            name: A
            bounds:
              - Path:
                  segments:
                    - Ord
                  generic_args: []
            default_type: ~
        - Type:
            name: B
            bounds:
              - Path:
                  segments:
                    - Ord
                  generic_args: []
            default_type: ~
      requires: []
      variants:
        - name: first
          ty:
            Path:
              segments:
                - A
              generic_args: []
        - name: second
          ty:
            Path:
              segments:
                - B
              generic_args: []
